--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-==============
 Desconferência
 ==============
 
-Tema Wordpress para o site do `Desconferência Podcast<http://desconferencia.com.br>`
+Tema Wordpress para o site do [Desconferência Podcast](http://desconferencia.com.br)
 
 Atenção
-=======
+-------
 
 Este tema ainda não está pronto, mas você encontra o html raw no repositório
